@startuml
class MachineView {
    + initViews() : void
    + Initialize(anchorPresenter:MachinePresenter) : void
    + OnDestroy() : void
}
class MachineViewFactory {
    + MachineViewFactory(container:DiContainer)
    + Create(prefab:Object) : MachinePresenter
    + Create(prefab:Object, presenter:MachinePresenter) : MachineView
}
class Factory {
}
class "IFactory`3"<T1,T2,T3> {
}
class "PlaceholderFactory`3"<T1,T2,T3> {
}
MonoBehaviour <|-- MachineView
MachineView --> "addAnchorButton" Interactable
MachineView --> "removeAnchorButton" Interactable
MachineView --> "tapToPlaceButton" Interactable
MachineView --> "deleteButton" Interactable
"IFactory`3" "<UnityEngine.Object,MachinePresenter,MachineView>" <|-- MachineViewFactory
MachineViewFactory --> "_container" DiContainer
MachineView +-- Factory
"PlaceholderFactory`3" "<UnityEngine.Object,MachinePresenter,MachineView>" <|-- Factory
@enduml
